# hillside

firmware/hillside-keyberon/: Cargo.toml  Embed.toml  README.md
firmware/hillside-keyberon/.cargo/: config.toml
firmware/hillside-keyberon/src/: common.rs  hillside.rs  layout.rs  lib.rs  main.rs  mcu.rs
firmware/hillside-keyberon/src/keyboards/: hillside46.rs  mod.rs
firmware/hillside-keyberon/src/layouts/: common.rs  miryoku.rs  mod.rs
