[package]
name = "hillside-keyberon"
version = "0.1.0"
edition = "2021"
description = "Keyberon firmware for Hillside keyboards"
repository = "https://github.com/hosaka/hillside"
keywords = ["keyboard", "firmware"]
categories = ["embedded", "no-std"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rtic = "1.1.4"
embedded-hal = "0.2.7"
usb-device = "0.2.9"

defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

# bsp
rp-pico = "0.8.0"
# sparkfun-pro-micro-rp2040 = "0.7.0"

nb = "1.1.0"
fugit = "0.3.7"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "24bd53f850bb5f07b1eee36fe3ac75082d439c10", version = "0.2.0" }
rp2040-hal = "0.9.1"
